// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioElement /> should not be checked 1`] = `
<DocumentFragment>
  .c0 > svg {
  height: 16px;
  width: 16px;
}

.c0 > svg circle {
  cx: 8px;
  cy: 8px;
}

.c0 > svg .c2 {
  r: 7px;
}

.c3 {
  fill: #dbdbdb;
  stroke: #dbdbdb;
  stroke-width: 2px;
}

.c4 {
  fill: #0665d0;
  r: 0;
  -webkit-transition: r 200ms 0s ease-in-out;
  transition: r 200ms 0s ease-in-out;
}

.c5 {
  fill: #fff;
  -webkit-transition: r 200ms 0s ease-in-out;
  transition: r 200ms 0s ease-in-out;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
}

<div
    class="c0 c1"
  >
    <svg>
      <circle
        class="c2 c3"
      />
      <circle
        class="c4"
      />
      <circle
        class="c5"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`<RadioElement /> should render component 1`] = `
<DocumentFragment>
  .c0 > svg {
  height: 16px;
  width: 16px;
}

.c0 > svg circle {
  cx: 8px;
  cy: 8px;
}

.c0 > svg .c2 {
  r: 7px;
}

.c0 > svg .c4 {
  r: 8px;
}

.c0 > svg .c6 {
  r: 1.6px;
}

.c3 {
  fill: #dbdbdb;
  stroke: #dbdbdb;
  stroke-width: 2px;
}

.c5 {
  fill: #0665d0;
  r: 0;
  -webkit-transition: r 200ms 0s ease-in-out;
  transition: r 200ms 0s ease-in-out;
}

.c7 {
  fill: #fff;
  -webkit-transition: r 200ms 0s ease-in-out;
  transition: r 200ms 0s ease-in-out;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
}

<div
    class="c0 c1"
  >
    <svg>
      <circle
        class="c2 c3"
      />
      <circle
        class="c4 c5"
      />
      <circle
        class="c6 c7"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`<RadioElement /> should render component outline 1`] = `
<DocumentFragment>
  .c0 > svg {
  height: 16px;
  width: 16px;
}

.c0 > svg circle {
  cx: 8px;
  cy: 8px;
}

.c0 > svg .c2 {
  r: 7px;
}

.c0 > svg .c4 {
  r: 8px;
}

.c0 > svg .c6 {
  r: 1.6px;
}

.c3 {
  fill: transparent;
  stroke: #dbdbdb;
  stroke-width: 2px;
}

.c5 {
  fill: #0665d0;
  r: 0;
  -webkit-transition: r 200ms 0s ease-in-out;
  transition: r 200ms 0s ease-in-out;
}

.c7 {
  fill: #fff;
  -webkit-transition: r 200ms 0s ease-in-out;
  transition: r 200ms 0s ease-in-out;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
}

<div
    class="c0 c1"
  >
    <svg>
      <circle
        class="c2 c3"
      />
      <circle
        class="c4 c5"
      />
      <circle
        class="c6 c7"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`<RadioElement /> should render component with soft colors 1`] = `
<DocumentFragment>
  .c0 > svg {
  height: 16px;
  width: 16px;
}

.c0 > svg circle {
  cx: 8px;
  cy: 8px;
}

.c0 > svg .c2 {
  r: 7px;
}

.c0 > svg .c4 {
  r: 8px;
}

.c0 > svg .c6 {
  r: 1.6px;
}

.c3 {
  fill: #dbdbdb;
  stroke: #dbdbdb;
  stroke-width: 2px;
}

.c5 {
  fill: #cde0f5;
  r: 0;
  -webkit-transition: r 200ms 0s ease-in-out;
  transition: r 200ms 0s ease-in-out;
}

.c7 {
  fill: #fff;
  -webkit-transition: r 200ms 0s ease-in-out;
  transition: r 200ms 0s ease-in-out;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
}

<div
    class="c0 c1"
  >
    <svg>
      <circle
        class="c2 c3"
      />
      <circle
        class="c4 c5"
      />
      <circle
        class="c6 c7"
      />
    </svg>
  </div>
</DocumentFragment>
`;
